Renamed services to be lower case

--- a/WebContent/views/snippets.html
+++ b/WebContent/views/snippets.html
@@ -18,5 +18,5 @@
 			</li>
 		</ul>
 	</div>
-	<!--snippit for Report Period Dropdown ends here-->
+	<!--snippet for Report Period Dropdown ends here-->
 </div>
