--- a/WebContent/css/pd-style.css
+++ b/WebContent/css/pd-style.css
@@ -4,6 +4,10 @@ body {
   padding-top: 0px; /* 40px to make the container go all the way to the bottom of the topbar */
 }
 
+li {
+	cursor: pointer;
+}
+
 .container-fluid.fixed-230 {
 	height:           230px;
 	overflow:         auto;
