--- a/WebContent/css/pd-style.css
+++ b/WebContent/css/pd-style.css
@@ -8,6 +8,11 @@ li {
 	cursor: pointer;
 }
 
+.container-fluid.fixed-100 {
+	height:           100px;
+	overflow:         auto;
+}
+
 .container-fluid.fixed-230 {
 	height:           230px;
 	overflow:         auto;
