--- a/WebContent/css/pd-style.css
+++ b/WebContent/css/pd-style.css
@@ -9,7 +9,7 @@ li {
 }
 
 .container-fluid.fixed-100 {
-	height:           100px;
+	height:           110px;
 	overflow:         auto;
 }
 
@@ -20,6 +20,7 @@ li {
 
 .container-fluid.fixed-313 {
 	height:           313px;
+	overflow:         auto;
 }
 
 .container-fluid.bg-black {
