--- a/WebContent/views/measureComparativeView.html
+++ b/WebContent/views/measureComparativeView.html
@@ -2,12 +2,14 @@
 	<div class="container-fluid bg-darkgray no-margin">
 		<div class="row-fluid">
 			<div class="col-md-5" dropdown is-open="status.isopen1">
+				<span>Selected Entity: </span>
 				<button type="button" class="btn btn-default dropdown-toggle"
 					ng-disabled="disabled" ng-click="openNetworkHierarchy()">
-					{{network.selectedHierarchyNode.label || 'Loading...'}}<span class="caret"></span>
+					{{network.selectedHierarchyNode.label || 'Loading...'}}&nbsp<span class="caret"></span>
 				</button>
 			</div>
 			<div class="col-md-3" dropdown is-open="status.isopen2">
+				<span>Reporting Period: </span>
 				<button type="button" class="btn btn-default dropdown-toggle"
 					ng-disabled="disabled">
 					{{reportingPeriod.selectedItem.displayValue}} <span class="caret"></span>
@@ -18,6 +20,12 @@
 					</li>
 				</ul>
 			</div>
+		</div>
+	</div>
+	<div class="container-fluid bg-gray no-margin no-padding">
+		<div class="col-md-8">
+			<span style="color:MidnightBlue;font-size:x-large;">{{network.selectedHierarchyNode.label}}</span>
+		</div>
 			<div class="col-md-4" dropdown is-open="status.isopen3">
 				<button type="button" class="btn btn-default dropdown-toggle pull-right"
 					ng-disabled="disabled">
@@ -25,11 +33,10 @@
 				</button>
 				<ul class="dropdown-menu pull-right" role="menu">
 					<li ng-repeat="item in viewList"><a
-						ng-click="selectView(item.id)">{{item.name}}</a>
+						ng-click="selectView(item)">{{item.name}}</a>
 					</li>
 				</ul>
 			</div>
-		</div>
 	</div>
 	<div class="container-fluid bg-lightgray no-margin no-padding">
 		<div class="row-fluid">
@@ -40,7 +47,7 @@
 		        </li>
 		    </ul>
 			<div id="tabPanel" class="container-fluid no-margin gray-border bg-white">
-				<div id="topPanel" ng-bind-html="renderHtml(summaryPaneContent)" class="container-fluid fixed-100 bg-white">
+				<div id="topPanel" ng-bind-html="renderHtml(summaryPaneContent)" class="container-fluid fixed-110 bg-white">
 					<!-- <p style="padding-left:5px; color:white;">Summary Pane</p> -->
 				</div>
 				<div class="container-fluid bg-darkgray">
