--- a/WebContent/views/domainComparativeView.html
+++ b/WebContent/views/domainComparativeView.html
@@ -5,7 +5,7 @@
 				<span>Selected Entity: </span>
 				<button type="button" class="btn btn-default dropdown-toggle"
 					ng-disabled="disabled" ng-click="openNetworkHierarchy()">
-					{{network.selectedHierarchyNode.label || 'Loading...'}}&nbsp<span class="caret"></span>
+					{{network.selectedHierarchyNode.name || 'Loading...'}}&nbsp<span class="caret"></span>
 				</button>
 			</div>
 			<div class="col-md-3" dropdown is-open="status.isopen2">
@@ -22,10 +22,16 @@
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid bg-gray no-margin no-padding">
-		<div class="col-md-8">
-			<span style="color:MidnightBlue;font-size:x-large;">{{network.selectedHierarchyNode.label}}</span>
-		</div>
+	<div class="container-fluid bg-gray no-margin">
+		<div class="row-fluid">
+			<div class="col-md-8">
+				<div class="row">
+					<span class="pull-left" style="color:MidnightBlue;font-size:x-large;">{{network.selectedHierarchyNode.name}}</span>
+				</div>
+				<div class="row">
+					<span class="pull-left" style="color:MidnightBlue;font-size:medium;">Program: {{program.selectedProgram.programName}}</span>
+				</div>
+			</div>
 			<div class="col-md-4" dropdown is-open="status.isopen3">
 				<button type="button" class="btn btn-default dropdown-toggle pull-right"
 					ng-disabled="disabled">
@@ -37,6 +43,7 @@
 					</li>
 				</ul>
 			</div>
+		</div>
 	</div>
 	<div class="container-fluid bg-lightgray no-margin no-padding">
 		<div class="row-fluid">
