First pass domainComparativeView

--- a/WebContent/views/domainComparativeView.html
+++ b/WebContent/views/domainComparativeView.html
@@ -1,4 +1,4 @@
-<div ng-controller="domainComparativeViewController">
+<div>
 	<div class="container-fluid bg-darkgray no-margin">
 		<div class="row-fluid">
 			<div class="col-md-5" dropdown is-open="status.isopen1">
