--- a/WebContent/views/measureComparativeView.html
+++ b/WebContent/views/measureComparativeView.html
@@ -20,22 +20,29 @@
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid bg-gray no-margin no-padding">
-		<div class="col-md-8">
-			<span style="color: MidnightBlue; font-size: x-large;">{{network.selectedHierarchyNode.name}}</span>
-		</div>
-		<div class="col-md-4" dropdown is-open="status.isopen3">
-			<button type="button" class="btn btn-default dropdown-toggle pull-right" ng-disabled="disabled">
-				{{selectedView.name || 'View Selection'}}&nbsp;<span class="caret"></span>
-			</button>
-			<ul class="dropdown-menu" role="menu" style="right: 15px; left: auto;">
-				<li ng-repeat="item in viewList"><a ng-click="selectView(item)">{{item.name}}</a></li>
-			</ul>
+	<div class="container-fluid bg-gray no-margin">
+		<div class="row-fluid">
+			<div class="col-md-8">
+				<div class="row">
+					<span class="pull-left" style="color: MidnightBlue; font-size: x-large;">{{network.selectedHierarchyNode.name}}</span>
+				</div>
+				<div class="row">
+					<span class="pull-left" style="color: MidnightBlue; font-size: medium;">Program:
+						{{program.selectedProgram.programName}}</span>
+				</div>
+			</div>
+			<div class="col-md-4" dropdown is-open="status.isopen3">
+				<button type="button" class="btn btn-default dropdown-toggle pull-right" ng-disabled="disabled">
+					{{selectedView || 'View'}} <span class="caret"></span>
+				</button>
+				<ul class="dropdown-menu" role="menu" style="right: 15px; left: auto;">
+					<li ng-repeat="item in viewList"><a ng-click="selectView(item)">{{item}}</a></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 	<div class="container-fluid bg-lightgray no-margin no-padding">
 		<div class="row-fluid">
-
 			<ul class="nav nav-tabs" role="tablist" ng-init="tab = 1">
 				<li ng-repeat="domain in domainData" ng-class="{active: isSelected(domain)}"><a href="" role="tab"
 					data-toggle="tab" ng-click="loadTab(domain)">{{domain.name}}</a></li>
