--- a/WebContent/views/measureComparativeView.html
+++ b/WebContent/views/measureComparativeView.html
@@ -8,12 +8,12 @@
 					{{network.selectedHierarchyNode.name || 'Selected Entity'}}&nbsp;<span class="caret"></span>
 				</button>
 			</div>
-			<div class="col-md-3" dropdown is-open="status.isopen2">
+			<div class="col-md-4" dropdown is-open="status.isopen2">
 				<span>Reporting Period:</span>
 				<button type="button" class="btn btn-default dropdown-toggle" ng-disabled="disabled">
 					{{reportingPeriod.selectedItem.displayValue || 'Reporting Period'}}&nbsp;<span class="caret"></span>
 				</button>
-				<ul class="dropdown-menu" role="menu" style="right: 50px; left: auto;">
+				<ul class="dropdown-menu" role="menu" style="right: auto; left: 120px;">
 					<li ng-repeat="item in reportingPeriod.data"><a ng-click="selectReportingPeriod(item.useValue)">{{item.displayValue}}</a>
 					</li>
 				</ul>
@@ -32,7 +32,7 @@
 				</div>
 			</div>
 			<div class="col-md-4" dropdown is-open="status.isopen3">
-				<button type="button" class="btn btn-default dropdown-toggle pull-right" ng-disabled="disabled">
+				<button type="button" class="pull-right btn btn-default dropdown-toggle" ng-disabled="disabled">
 					{{selectedView || 'View'}} <span class="caret"></span>
 				</button>
 				<ul class="dropdown-menu" role="menu" style="right: 15px; left: auto;">
@@ -43,7 +43,7 @@
 	</div>
 	<div class="container-fluid bg-lightgray no-margin no-padding">
 		<div class="row-fluid">
-			<ul class="nav nav-tabs" role="tablist" ng-init="tab = 1">
+			<ul class="nav nav-tabs" id="myTab" role="tablist" ng-init="tab = 1">
 				<li ng-repeat="domain in domainData" ng-class="{active: isSelected(domain)}"><a href="" role="tab"
 					data-toggle="tab" ng-click="loadTab(domain)">{{domain.name}}</a></li>
 			</ul>
