--- a/WebContent/views/domainComparativeView.html
+++ b/WebContent/views/domainComparativeView.html
@@ -41,7 +41,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid bg-lightgray no-margin no-padding">
+	<div class="container-fluid bg-white no-margin no-padding">
 		<div class="row-fluid">
 			<div id="topPanel" ng-bind-html="renderHtml(summaryPaneContent)" class="container-fluid no-padding fixed-110 bg-white">
 				<!-- <p style="padding-left:5px; color:white;">Summary Pane</p> -->
