--- a/WebContent/views/measureComparativeView.html
+++ b/WebContent/views/measureComparativeView.html
@@ -41,14 +41,14 @@
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid bg-lightgray no-margin no-padding">
+	<div class="container-fluid bg-lightblue no-margin no-padding">
 		<div class="row-fluid">
 			<ul class="nav nav-tabs" id="myTab" role="tablist" ng-init="tab = 1">
 				<li ng-repeat="domain in domainData" ng-class="{active: isSelected(domain)}"><a href="" role="tab"
 					data-toggle="tab" ng-click="loadTab(domain)">{{domain.name}}</a></li>
 			</ul>
 			<div id="tabPanel" class="container-fluid no-margin gray-border bg-white">
-				<div id="topPanel" ng-bind-html="renderHtml(summaryPaneContent)" class="container-fluid fixed-110 bg-white">
+				<div id="topPanel" ng-bind-html="renderHtml(summaryPaneContent)" class="container-fluid no-padding fixed-110 bg-white">
 					<!-- <p style="padding-left:5px; color:white;">Summary Pane</p> -->
 				</div>
 				<div class="container-fluid bg-darkgray"></div>
