--- a/WebContent/css/pd-style.css
+++ b/WebContent/css/pd-style.css
@@ -22,11 +22,29 @@ a {
 	overflow:         auto;
 }
 
+.container-fluid.fixed-160 {
+	height:           160px;
+	overflow:         auto;
+}
+
 .container-fluid.fixed-313 {
 	height:           313px;
 	overflow:         auto;
 }
 
+.container-fluid.fixed-310 {
+	height:           310px;
+	overflow:         auto;
+}
+.container-fluid.fixed-395 {
+	height:           395px;
+	overflow:         auto;
+}
+
+.container-fluid.fixed-370 {
+	height:           370px;
+	overflow:         auto;
+}
 .container-fluid.bg-black {
 	background-color: Black;
 	margin:           5px;
