--- a/WebContent/views/measureComparativeView.html
+++ b/WebContent/views/measureComparativeView.html
@@ -52,15 +52,17 @@
 					class="container-fluid no-padding fixed-110 bg-white">
 				</div>
 				<div class="container-fluid bg-darkgray"></div>
-				<div id="bottomPanel" ng-bind-html="renderHtml(contentPaneContent)" class="container-fluid fixed-313 bg-white">
+				<div id="bottomPanel" ng-bind-html="renderHtml(contentPaneContent)" class="container-fluid fixed-310 bg-white">
 				</div>
 				<div ng-show="showLegend" class="container-fluid" style="background-color: #E7E5E5; margin-left: 10px; margin-right: 5px; padding-left: 5px;">
-					<div>
+					<div class="pull-right">
 						<span style="font-weight: bold;">Legend:&nbsp;&nbsp;</span> 
 						<img style="vertical-align: middle" src="./images/red_square.png"><span style="vertical-align: middle;">&nbsp; failing to meet threshold&nbsp;&nbsp;</span>
 						<img style="vertical-align: middle" src="./images/yellow_triangle.png"><span style="vertical-align: middle;">&nbsp;at risk to fail threshold&nbsp;&nbsp;</span>
 						<img style="vertical-align: middle" src="./images/green_circle.png"><span style="vertical-align: middle;">&nbsp; meeting or exceeding threshold threshold</span>
 					</div>
+				</div>
+				<div ng-hide="showLegend" style="height:20px">
 				</div>
 			</div>
 		</div>
