--- a/WebContent/views/domainComparativeView.html
+++ b/WebContent/views/domainComparativeView.html
@@ -20,16 +20,12 @@
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid bg-gray no-margin">
+	<div class="container-fluid bg-gray no-padding">
 		<div class="row-fluid">
-			<div class="col-md-8">
-				<div class="row">
-					<span class="pull-left" style="color: MidnightBlue; font-size: x-large;">{{network.selectedHierarchyNode.name}}</span>
-				</div>
-				<div class="row">
-					<span class="pull-left" style="color: MidnightBlue; font-size: medium;">Program:
-						{{program.selectedProgram.programName}}</span>
-				</div>
+			<div class="col-md-8" style="padding-top: 5px">
+				<span style="color: MidnightBlue; font-size: medium;">Program:
+					{{program.selectedProgram.programName}}
+				</span>
 			</div>
 			<div class="col-md-4" dropdown is-open="status.isopen3">
 				<button type="button" class="btn btn-default dropdown-toggle pull-right" ng-disabled="disabled">
@@ -41,13 +37,13 @@
 			</div>
 		</div>
 	</div>
-	<div class="container-fluid bg-white no-margin no-padding">
+	<div class="container-fluid bg-white no-padding">
 		<div class="row-fluid">
 			<div id="topPanel" ng-bind-html="renderHtml(summaryPaneContent)" class="container-fluid no-padding bg-white">
 				<!-- <p style="padding-left:5px; color:white;">Summary Pane</p> -->
 			</div>
 			<div class="container-fluid bg-darkgray"></div>
-			<div id="bottomPanel" ng-bind-html="renderHtml(contentPaneContent)" class="container-fluid fixed-370 bg-white">
+			<div id="bottomPanel" ng-bind-html="renderHtml(contentPaneContent)" class="container-fluid fixed-385 bg-white">
 			</div>
 			<div ng-show="showLegend" class="container-fluid" style="background-color: #E7E5E5; margin-left: 10px; margin-right: 5px; margin-bottom: 5px; padding-left: 5px;">
 				<div class="pull-right">
