Div resizeable support added.

--- a/WebContent/views/domainSummaryView.html
+++ b/WebContent/views/domainSummaryView.html
@@ -43,7 +43,7 @@
 				<!-- <p style="padding-left:5px; color:white;">Summary Pane</p> -->
 			</div>
 			<div class="container-fluid bg-darkgray"></div>
-			<div id="bottomPanel" ng-bind-html="renderHtml(contentPaneContent)" class="container-fluid fixed-410 bg-white">
+			<div resizebottomdiv="25" id="bottomPanel" ng-bind-html="renderHtml(contentPaneContent)" class="container-fluid fixed-110 bg-white" >
 			</div>
 		</div>
 	</div>
