--- a/WebContent/views/measureDetailView.html
+++ b/WebContent/views/measureDetailView.html
@@ -55,7 +55,7 @@
 			<div id="topPanel" ng-bind-html="renderHtml(summaryPaneContent)" class="container-fluid bg-white">
 			</div>
 			<div class="container-fluid bg-darkgray"></div>
-			<div id="bottomPanel" ng-bind-html="renderHtml(contentPaneContent)" class="container-fluid fixed-175 bg-white">
+			<div resizebottomdiv="25" id="bottomPanel" ng-bind-html="renderHtml(contentPaneContent)" style="overflow: auto" class="container-fluid bg-white">
 			</div>
 		</div>
 	</div>
