--- a/WebContent/views/domainComparativeView.html
+++ b/WebContent/views/domainComparativeView.html
@@ -43,7 +43,7 @@
 				<!-- <p style="padding-left:5px; color:white;">Summary Pane</p> -->
 			</div>
 			<div class="container-fluid bg-darkgray"></div>
-			<div id="bottomPanel" ng-bind-html="renderHtml(contentPaneContent)" class="container-fluid fixed-385 bg-white">
+			<div resizebottomdiv="51" id="bottomPanel" ng-bind-html="renderHtml(contentPaneContent)" class="container-fluid fixed-310 bg-white">
 			</div>
 			<div ng-show="showLegend" class="container-fluid" style="background-color: #E7E5E5; margin-left: 10px; margin-right: 5px; margin-bottom: 5px; padding-left: 5px;">
 				<div class="pull-right">
