--- a/WebContent/views/domainSummaryView.html
+++ b/WebContent/views/domainSummaryView.html
@@ -43,8 +43,18 @@
 				<!-- <p style="padding-left:5px; color:white;">Summary Pane</p> -->
 			</div>
 			<div class="container-fluid bg-darkgray"></div>
-			<div resizebottomdiv="25" id="bottomPanel" ng-bind-html="renderHtml(contentPaneContent)" class="container-fluid fixed-110 bg-white" >
+			<div resizebottomdiv="51" id="bottomPanel" ng-bind-html="renderHtml(contentPaneContent)" class="container-fluid fixed-110 bg-white" >
 			</div>
+			<div ng-show="showLegend" class="container-fluid" style="background-color: #E7E5E5; margin-left: 10px; margin-right: 5px; margin-bottom: 5px; padding-left: 5px;">
+				<div class="pull-right">
+					<span style="font-weight: bold;">Legend:&nbsp;&nbsp;</span> 
+					<img style="vertical-align: middle" src="./images/red_square.png"><span style="vertical-align: middle;">&nbsp; failing to meet threshold&nbsp;&nbsp;</span>
+					<img style="vertical-align: middle" src="./images/yellow_triangle.png"><span style="vertical-align: middle;">&nbsp;at risk to fail threshold&nbsp;&nbsp;</span>
+					<img style="vertical-align: middle" src="./images/green_circle.png"><span style="vertical-align: middle;">&nbsp; meeting or exceeding threshold</span>
+				</div>
+			</div>
+			<div ng-hide="showLegend" style="height:25px">
+			</div>		
 		</div>
 	</div>
 </div>
