--- a/WebContent/views/measureSummaryView.html
+++ b/WebContent/views/measureSummaryView.html
@@ -59,8 +59,20 @@
 					class="container-fluid no-padding bg-white">
 				</div>
 				<div class="container-fluid bg-darkgray"></div>
-				<div resizebottomdiv="31" id="bottomPanel" ng-bind-html="renderHtml(contentPaneContent)" class="container-fluid fixed-110 bg-white">
+				<div resizebottomdiv="52" id="bottomPanel" ng-bind-html="renderHtml(contentPaneContent)" class="container-fluid fixed-110 bg-white">
 				</div>
+				<div ng-show="showLegend" class="container-fluid" style="background-color: #E7E5E5; margin-left: 5px; margin-right: 5px; padding-left: 0px;">
+					<div class="col-md-3" style=" padding-left: 10px;">* Indicates an ACO level measure
+					</div>
+					<div class="pull-right">
+						<span style="font-weight: bold;">Legend:&nbsp;&nbsp;</span> 
+						<img style="vertical-align: middle" src="./images/red_square.png"><span style="vertical-align: middle;">&nbsp; failing to meet threshold&nbsp;&nbsp;</span>
+						<img style="vertical-align: middle" src="./images/yellow_triangle.png"><span style="vertical-align: middle;">&nbsp;at risk to fail threshold&nbsp;&nbsp;</span>
+						<img style="vertical-align: middle" src="./images/green_circle.png"><span style="vertical-align: middle;">&nbsp; meeting or exceeding threshold</span>
+					</div>
+				</div>
+				<div ng-hide="showLegend" style="height:25px">
+				</div>		
 			</div>
 		</div>
 	</div>
