Changed background color of legend

--- a/WebContent/views/measureDetailView.html
+++ b/WebContent/views/measureDetailView.html
@@ -57,7 +57,7 @@
 			<div class="container-fluid bg-darkgray"></div>
 			<div resizebottomdiv="51" id="bottomPanel" ng-bind-html="renderHtml(contentPaneContent)" style="overflow: auto" class="container-fluid bg-white">
 			</div>
-			<div ng-show="showLegend" class="container-fluid" style="background-color: #E7E5E5; margin-left: 5px; margin-right: 5px; margin-bottom: 5px; padding-left: 0px;">
+			<div ng-show="showLegend" class="container-fluid" style="background-color: #CFD8E6; margin-left: 5px; margin-right: 5px; margin-bottom: 5px; padding-left: 0px;">
 				<div class="col-md-3" style=" padding-left: 10px;">* Indicates an ACO level measure
 				</div>
 				<div class="pull-right">
