--- a/WebContent/views/domainComparativeView.html
+++ b/WebContent/views/domainComparativeView.html
@@ -45,7 +45,7 @@
 			<div class="container-fluid bg-darkgray"></div>
 			<div resizebottomdiv="51" id="bottomPanel" ng-bind-html="renderHtml(contentPaneContent)" class="container-fluid fixed-110 bg-white">
 			</div>
-			<div ng-show="showLegend" class="container-fluid" style="background-color: #E7E5E5; margin-left: 10px; margin-right: 5px; margin-bottom: 5px; padding-left: 5px;">
+			<div ng-show="showLegend" class="container-fluid" style="background-color: #CFD8E6; margin-left: 10px; margin-right: 5px; margin-bottom: 5px; padding-left: 5px;">
 				<div class="pull-right">
 					<span style="font-weight: bold;">Legend:&nbsp;&nbsp;</span> 
 					<img style="vertical-align: middle" src="./images/red_square.png"><span style="vertical-align: middle;">&nbsp; failing to meet threshold&nbsp;&nbsp;</span>
