--- a/WebContent/views/measureComparativeView.html
+++ b/WebContent/views/measureComparativeView.html
@@ -50,7 +50,7 @@
 				<div class="container-fluid bg-darkgray"></div>
 				<div resizebottomdiv="52" id="bottomPanel" ng-bind-html="renderHtml(contentPaneContent)" class="container-fluid fixed-110 bg-white">
 				</div>
-				<div ng-show="showLegend" class="container-fluid" style="background-color: #E7E5E5; margin-left: 5px; margin-right: 10px; padding-left: 0px;">
+				<div ng-show="showLegend" class="container-fluid" style="background-color: #CFD8E6; margin-left: 5px; margin-right: 10px; padding-left: 0px;">
 					<div class="col-md-3" style=" padding-left: 10px;">* Indicates an ACO level measure
 					</div>
 					<div class="pull-right">
