Changed measure summmary report to run on report per measure.  Added graident to measure summary and domain summary page.

--- a/WebContent/css/pd-style.css
+++ b/WebContent/css/pd-style.css
@@ -226,6 +226,17 @@ a {
   border: 0;
 }
 
+.bluegradient {
+	       background: #072c59; /* Old browsers */
+          background: -moz-linear-gradient(top,  #072c59 0%, #dbe8f1 45%, #dbe8f1 55%, #082d5a 100%); /* FF3.6+ */
+          background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#072c59), color-stop(45%,#dbe8f1), color-stop(55%,#dbe8f1), color-stop(100%,#082d5a)); /* Chrome,Safari4+ */
+          background: -webkit-linear-gradient(top,  #072c59 0%,#dbe8f1 45%,#dbe8f1 55%,#082d5a 100%); /* Chrome10+,Safari5.1+ */
+          background: -o-linear-gradient(top,  #072c59 0%,#dbe8f1 45%,#dbe8f1 55%,#082d5a 100%); /* Opera 11.10+ */
+          background: -ms-linear-gradient(top,  #072c59 0%,#dbe8f1 45%,#dbe8f1 55%,#082d5a 100%); /* IE10+ */
+          background: linear-gradient(to bottom,  #072c59 0%,#dbe8f1 45%,#dbe8f1 55%,#082d5a 100%); /* W3C */
+          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#072c59', endColorstr='#dbe8f1',GradientType=0 ); /* IE6-9 */
+}
+
 #myTab li a {
 	background-color: #EEEEEE;
 
