--- a/WebContent/views/domainSummaryView.html
+++ b/WebContent/views/domainSummaryView.html
@@ -43,7 +43,7 @@
 				<!-- <p style="padding-left:5px; color:white;">Summary Pane</p> -->
 			</div>
 			<div class="container-fluid bg-darkgray"></div>
-			<div resizebottomdiv="51" id="bottomPanel" ng-bind-html="renderHtml(contentPaneContent)" class="container-fluid fixed-110 bg-white" >
+			<div resizebottomdiv="51" id="bottomPanel" ng-bind-html="renderHtml(contentPaneContent)" class="container-fluid fixed-110 bg-white bg-white bluegradient">
 			</div>
 			<div ng-show="showLegend" class="container-fluid" style="background-color: #CFD8E6; margin-left: 5px; margin-right: 10px; margin-bottom: 5px; padding-left: 0px;">
 				<div class="col-md-3" style=" padding-left: 10px;">* Indicates an ACO level measure
